<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_HomeAbsEncoder" Id="{e468aa8e-7a1d-4d03-b1f9-f980cdfb5ba3}">
    <Declaration><![CDATA[TYPE ST_HomeAbsEncoder :
STRUCT
	
	BlockOffsetPosition: 	LREAL; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>